--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcc 'PZ'
 - !lcsh 'Girls -- Conduct of life -- Juvenile fiction'
 - !lcsh 'Conduct of life -- Juvenile fiction'
+- GITenberg
 tableOfContents: Gloria Dene's schoolfellows, by Ryeman -- My year at school, by Watson
   -- The silver star, by Holderness -- Uncle Tone, by Godkin -- A night on the road,
   by  Watson -- The missing letter, by Chappell -- "The colonel", by Dicken -- Nettie,
